# calm-go-pattern-search

./: .gitattributes  .prettierignore  Cargo.toml  README.md  index.html  package.json  tsconfig.json  vite-plugin-wasm-pack.ts  vite.config.ts
.github/workflows/: build-and-deploy.yml  lint.yml  pages.yml
frontend/: .gitignore  .prettierignore  components.json  eslint.config.js  index.html  netlify.toml  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  BrushToolbar.tsx  EditorGoban.css  EditorGoban.tsx  GameDisplayComponents.tsx  GameInfo.tsx  GamesList.tsx  GobanCommon.css  GobanEditor.css  GobanEditor.tsx  GobanViewer.css  GobanViewer.tsx  NextMovesList.tsx  PlayerSearch.tsx  TinyEditorGoban.css  TinyEditorGoban.tsx  TinyGoban.css  TinyGoban.tsx  TinyGobanViewer.tsx  TinyViewerGoban.tsx  ViewerGoban.css  ViewerGoban.tsx  app.tsx  brush-toolbar.tsx  editor-goban.css  editor-goban.tsx  game-display-components.tsx  games-list.tsx  global.css  goban-common.css  index.css  index.tsx  next-moves-list.tsx  player-search-engine.ts  player-search.tsx  playerSearch.ts  url-params.ts  (+7 more)
rust-pattern-search/: .cursorignore  Cargo.toml
rust/common/: Cargo.toml
rust/common/src/: baduk.rs  lib.rs
rust/pack-games/: .gitignore  Cargo.toml  blocklist.txt
rust/pack-games/python-player-name-aliases/: .gitignore  add_possible_aliases.py  all_names.txt  combine_aliases.py  custom_aliases.json  fixup_playerdb_repeated_aliases.py  foreign_names.txt  main.py  name_aliases.json  names.txt  possible_aliases.txt  pyproject.toml  quick_search.py  rejected_alias_pairs.json  search_foreign_names.py  unknown_names.txt
rust/pack-games/sgfs/: andries-brouwer.7z  badukmovies-pro-collection.7z  pro-20140711.7z
rust/pack-games/src/: find_bad_komi.rs  find_custom_results.rs  find_custom_rules.rs  find_duplicates.rs  find_game_properties.rs  list_players.rs  load_sgfs.rs  main.rs  sgf_traversal.rs
rust/wasm-search/: .gitignore  Cargo.toml
rust/wasm-search/src/: baduk.rs  games.pack  lib.rs
sgfs/: extract.sh
src/: App.tsx  Goban.css  Goban.tsx  index.ts  index.tsx
ts/: App.tsx  GamesList.tsx  GobanEditor.css  GobanEditor.tsx  GobanViewer.css  GobanViewer.tsx  SabakiTypes.ts  games.ts  index.css  index.tsx  sabaki-types.ts  types.d.ts  wasm-search-types.ts  worker.ts
(+66 files in other folders)
