[package]
name = "calm-go-patterns-pack-games"
version = "0.1.0"
edition = "2024"
default-run = "pack-games"

[[bin]]
name = "pack-games"
path = "src/main.rs"

[[bin]]
name = "find-custom-rules"
path = "src/find_custom_rules.rs"

[[bin]]
name = "find-bad-komi"
path = "src/find_bad_komi.rs"

[[bin]]
name = "find-game-properties"
path = "src/find_game_properties.rs"

[[bin]]
name = "find-custom-results"
path = "src/find_custom_results.rs"

[dependencies]
calm-go-patterns-common = { path = "../common" }
jwalk = "0.8.1"
rayon = "1.10.0"
sgf-parse = "4.2.3"
